# ideaClaw

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.ideaclaw.example.yaml  prompts.default.yaml  pyproject.toml
.agents/workflows/: benchmark.md  run.md
config/: revise_sources.json  revision_claim_spec_template.json  revision_patch_spec_template.json
docs/: SOP_endpoint_extraction_standard.md  profile-guide.md
ideaclaw/: __init__.py  __main__.py  cli.py  config.py  health.py  prompts.py
ideaclaw/agents/: __init__.py  figure_agent.py
ideaclaw/arc/: __init__.py  generate_ideas.py  launch.py  llm.py  perform_review.py  perform_writeup.py
ideaclaw/evidence/: __init__.py  check_revision_sop.py  citation_verify.py  extractors.py  gate.py  verifier.py
ideaclaw/export/: __init__.py  build_q_source_map.py  docx.py  figure_agent.py  latex.py  markdown.py  pdf.py  query_q_source.py  revise_docx.py
ideaclaw/knowledge/: __init__.py  archive.py  memory.py  preferences.py  skills.py
ideaclaw/llm/: __init__.py  auth.py  client.py
ideaclaw/orchestrator/: __init__.py  benchmark.py  evaluator.py  evolution.py  hooks.py  loop.py  versioning.py  visualize.py
ideaclaw/pack/: __init__.py  builder.py  schema.py  trust_review.py
ideaclaw/pipeline/: __init__.py  housekeeping.py  (+5 more)
scripts/: gen_profiles.py
tests/: batch_test_30.py  conftest.py  test_arc_parity.py  test_t1_collector.py  test_t2_screener.py  test_t3_extractors.py  test_t4_gate.py  test_t5_citation.py  test_t6_verifier.py  test_t7_reasoning.py  test_t8_export_sandbox.py
(+329 files in other folders)
